<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".AddHikeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/editHikeNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hike Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
         />

    <EditText
        android:id="@+id/editHikeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:elevation="4dp"
        android:hint="@string/hike_name"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editHikeNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/editHikeLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hike Location"
        app:layout_constraintTop_toBottomOf="@+id/editHikeName"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/editHikeLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:elevation="4dp"
        android:hint="@string/hike_location"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editHikeLocationLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/editHikeDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date of Hike"
        app:layout_constraintTop_toBottomOf="@+id/editHikeLocation"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/editHikeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:elevation="4dp"
        android:hint="@string/hike_name"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editHikeDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="false"
        android:clickable="true"
        android:focusableInTouchMode="false"/>

    <TextView
        android:id="@+id/editHikeParkingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parking Available"
        app:layout_constraintTop_toBottomOf="@+id/editHikeDate"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <RadioGroup
        android:id="@+id/radioParkingAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editHikeParkingLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:id="@+id/editHikeLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Length of the Hike"
        app:layout_constraintTop_toBottomOf="@+id/radioParkingAvailable"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <EditText
    android:id="@+id/editHikeLength"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_border"
    android:elevation="4dp"
    android:hint="@string/hike_length"
    android:padding="16dp"
    app:layout_constraintTop_toBottomOf="@+id/editHikeLengthLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/editHikeDifficultyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Level of Difficulity"
        app:layout_constraintTop_toBottomOf="@+id/editHikeLength"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editHikeDifficultyLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/spinner_border"/>

    <TextView
        android:id="@+id/editHikeDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        app:layout_constraintTop_toBottomOf="@+id/difficultySpinner"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:elevation="4dp"
        android:hint="@string/hike_description"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHikeDescriptionLabel" />

    <TextView
        android:id="@+id/editHikeTrailConditionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trail Conditions"
        app:layout_constraintTop_toBottomOf="@+id/editDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/editTrailConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:elevation="4dp"
        android:hint="@string/hike_trail_condition"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHikeTrailConditionsLabel" />

        <TextView
            android:id="@+id/editRecommendedGearsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recommended Gears"
            app:layout_constraintTop_toBottomOf="@+id/editTrailConditions"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/editRecommendedGears"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_recommended_gear"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRecommendedGearsLabel" />




        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRecommendedGears" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>






