<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:padding="32dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/modifyHikeNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hike Name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            />

        <EditText
            android:id="@+id/hikeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_name"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/editHikeLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hike Location"
            app:layout_constraintTop_toBottomOf="@+id/hikeName"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyHikeLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_location"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editHikeLocationLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/modifyHikeDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date of Hike"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeLocation"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyHikeDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_name"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeDateLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="false"
            android:clickable="true"
            android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/modifyHikeParkingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Parking Available"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeDate"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <RadioGroup
            android:id="@+id/modifyRadioParkingAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeParkingLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:id="@+id/modifyHikeLengthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Length of the Hike"
            app:layout_constraintTop_toBottomOf="@+id/modifyRadioParkingAvailable"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyHikeLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_length"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeLengthLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/modifyHikeDifficultyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level of Difficulity"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeLength"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <Spinner
            android:id="@+id/modifyDifficultySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeDifficultyLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/spinner_border"/>

        <TextView
            android:id="@+id/modifyHikeDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            app:layout_constraintTop_toBottomOf="@+id/modifyDifficultySpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_description"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeDescriptionLabel" />

        <TextView
            android:id="@+id/modifyHikeTrailConditionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trail Conditions"
            app:layout_constraintTop_toBottomOf="@+id/modifyDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyTrailConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_trail_condition"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyHikeTrailConditionsLabel" />

        <TextView
            android:id="@+id/modifyRecommendedGearsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recommended Gears"
            app:layout_constraintTop_toBottomOf="@+id/modifyTrailConditions"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyRecommendedGears"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_recommended_gear"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyRecommendedGearsLabel" />

        <TextView
            android:id="@+id/modifyEmergencyContactInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Emmergency Contact Info"
            app:layout_constraintTop_toBottomOf="@+id/modifyRecommendedGears"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/modifyEmergencyContactInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:elevation="4dp"
            android:hint="@string/hike_emmergency_contact"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyEmergencyContactInfoLabel" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyEmergencyContactInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>






